syntax = "proto3";

package dxos.node;

import "google/protobuf/any.proto";

message NodeCommand {
  oneof command {
    EventCommand event = 1;
    SnapshotCommand snapshot = 2;
    DestroyCommand destroy = 3;
    CreatePartyCommand createParty = 4;
    CreateInvitationCommand createInvitation = 5;
    JoinPartyCommand joinParty = 6;
  }
}

message EventCommand {
  string event = 1;
}

message SnapshotCommand {

}

message DestroyCommand {

}

message CreatePartyCommand {

}

message CreateInvitationCommand {
  required bytes partyKey = 1;
}

message JoinPartyCommand {
  required bytes partyKey = 1;
  required string invitation = 2;
}

message NodeEvent {
  uint32 timestamp = 1;
  oneof event {
    ReadyEvent ready = 2;
    LogEvent log = 3;
    SnapshotEvent snapshot = 4;
    MetricsUpdateEvent metricsUpdate = 5;
    PartyCreatedEvent partyCreated = 6;
    InvitationCreatedEvent invitationCreated = 7;
    InvitationAcceptedEvent invitationAccepted = 8;
  }
}

message ReadyEvent {

}

message LogEvent {
  string eventName = 1;
  string details = 2;
}

message SnapshotEvent {
  string data = 1;
}

message MetricsUpdateEvent {
  message Value {
    oneof value {
      int32 int = 2;
      string string = 3;
      bool bool = 4;
    }
  }

  string key = 1;
  Value value = 2;
}

message PartyCreatedEvent {
  required bytes partyKey = 1;
}

message InvitationCreatedEvent {
  required bytes partyKey = 1;
  required string data = 2;
}

message InvitationAcceptedEvent {
  required bytes partyKey = 1;
  string response = 2;
}
